--- a/package.json
+++ b/package.json
@@ -3,46 +3,50 @@
   "version": "1.0.0",
   "description": "This is iiwii's personal GitHub page source.",
   "dependencies": {
-    "@emotion/react": "^11.1.4",
-    "@hot-loader/react-dom": "^17.0.1",
+    "@emotion/react": "^11.1.5",
+    "i18next": "^19.8.7",
+    "i18next-browser-languagedetector": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0"
+    "react-i18next": "^11.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@emotion/babel-preset-css-prop": "^11.0.0",
-    "autoprefixer": "^10.2.1",
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.17.0",
+    "css-loader": "^5.0.2",
+    "eslint": "^7.20.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "html-webpack-plugin": "^5.0.0-beta.4",
-    "html-webpack-template": "^6.2.0",
-    "postcss": "^8.2.4",
+    "eslint-webpack-plugin": "^2.5.1",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^5.1.0",
+    "postcss": "^8.2.6",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^2.0.3",
     "terser-webpack-plugin": "^5.1.1",
     "typescript-xwind-plugin": "^0.7.0",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "xwind": "^0.7.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --env dev",
+    "dev": "webpack serve --mode development --hot",
+    "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "build": "webpack"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -53,5 +57,5 @@
   "bugs": {
     "url": "https://github.com/iiwii/iiwii.github.io/issues"
   },
-  "homepage": "https://github.com/iiwii/iiwii.github.io#readme"
+  "homepage": "https://iiwii.github.io"
 }
