--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "iiwii.github.io",
   "version": "1.0.0",
   "description": "This is iiwii's personal GitHub page source.",
+  "browser": "index.js",
   "dependencies": {
-    "@emotion/react": "^11.1.5",
+    "@compiled/react": "^0.6.10",
     "i18next": "^19.8.7",
     "i18next-browser-languagedetector": "^6.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-i18next": "^11.8.6"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.6",
+    "twin.macro": "^2.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
-    "@babel/preset-react": "^7.12.13",
-    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@compiled/babel-plugin": "^0.6.13",
+    "@compiled/webpack-loader": "^0.6.15",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-twin": "^1.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "eslint": "^7.20.0",
@@ -29,7 +34,8 @@
     "eslint-webpack-plugin": "^2.5.1",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.1.0",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^5.2.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
@@ -38,8 +44,7 @@
     "typescript-xwind-plugin": "^0.7.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "xwind": "^0.7.4"
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
