--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.8.6",
-    "twin.macro": "^2.3.3"
+    "react-i18next": "^11.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
-    "@compiled/babel-plugin": "^0.6.13",
     "@compiled/webpack-loader": "^0.6.15",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "autoprefixer": "^10.2.4",
@@ -41,6 +39,7 @@
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.3",
     "terser-webpack-plugin": "^5.1.1",
+    "twin.macro": "^2.3.3",
     "typescript-xwind-plugin": "^0.7.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
