--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@compiled/babel-plugin": "^0.6.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "autoprefixer": "^10.2.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-twin": "^1.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
-    "eslint": "^7.20.0",
     "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-jsx": "^10.0.0",
+    "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-webpack-plugin": "^2.5.1",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.1.0",
@@ -35,6 +37,7 @@
     "postcss-loader": "^5.2.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react-refresh": "^0.9.0",
+    "standard": "^16.0.3",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.3",
     "terser-webpack-plugin": "^5.1.1",
@@ -45,10 +48,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint .",
     "dev": "webpack serve --mode development --hot",
     "build": "webpack --mode production",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
