--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,11 @@ jobs:
           path: dist/
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/download-artifact@v2.0.9
+        with:
+          path: dist/
       - name: gh-pages
         run: |
           npm deploy
