--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ jobs:
           npm run build
       - uses: actions/upload-artifact@v2.2.3
         with:
+          name: dist
           path: dist/
   publish:
     runs-on: ubuntu-latest
@@ -27,7 +28,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v2.0.9
         with:
-          path: dist/
+          name: dist
       - name: gh-pages
         run: |
           npm deploy
