--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: build
-        run: |
+      - uses: actions/checkout@v2
+      - run: |
           npm install
           npm run build
       - uses: actions/upload-artifact@v2.2.3
@@ -26,11 +24,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2.0.9
         with:
           name: dist
-      - name: gh-pages
-        run: |
+      - run: |
           npm run deploy
 
   
