--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/download-artifact@v2.0.9
         with:
           name: dist
+          path: dist/
       - name: publish
         run: |
           npm install gh-pages
