--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
           name: dist
           path: dist/
       - name: publish
-        run: |
-          npm install gh-pages
-          npx gh-pages -d dist/
+        uses: Cecilapp/GitHub-Pages-deploy@3.1.0
+        with:
+          build_dir: dist/
   
