--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -18,22 +18,6 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: upload
-        uses: actions/upload-artifact@v2.2.3
-        with:
-          name: dist
-          path: dist/
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: download
-        uses: actions/download-artifact@v2.0.9
-        with:
-          name: dist
-          path: dist/
       - name: publish
-        uses: Cecilapp/GitHub-Pages-deploy@3.1.0
-        with:
-          build_dir: dist/
+        run: npm run deploy
   
