--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-twin": "^1.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "eslint-config-standard": "^16.0.2",
