--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "description": "This is iiwii's personal GitHub page source.",
   "browser": "index.js",
   "dependencies": {
+    "@babel/runtime": "^7.13.17",
     "@compiled/react": "^0.6.10",
+    "core-js": "^3.10.2",
     "i18next": "^19.8.7",
     "i18next-browser-languagedetector": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.8.6"
+    "react-i18next": "^11.8.6",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/eslint-plugin": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@compiled/babel-plugin": "^0.6.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/react": "^17.0.3",
+    "@types/webpack-env": "^1.16.0",
     "autoprefixer": "^10.2.4",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-twin": "^1.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "eslint-config-standard": "^16.0.2",
@@ -34,10 +41,9 @@
     "eslint-webpack-plugin": "^2.5.1",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.1.0",
-    "postcss": "^8.2.10",
-    "postcss-loader": "^5.2.0",
-    "progress-bar-webpack-plugin": "^2.1.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "react-refresh": "^0.9.0",
+    "simple-progress-webpack-plugin": "^1.1.2",
     "standard": "^16.0.3",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.3",
@@ -45,6 +51,7 @@
     "twin.macro": "^2.3.3",
     "typescript-xwind-plugin": "^0.7.0",
     "webpack": "^5.22.0",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
@@ -63,5 +70,6 @@
   "bugs": {
     "url": "https://github.com/iiwii/iiwii.github.io/issues"
   },
-  "homepage": "https://iiwii.github.io"
+  "homepage": "https://iiwii.github.io",
+  "sideEffects": false
 }
