remove typescript and fix dependencies

--- a/package.json
+++ b/package.json
@@ -4,61 +4,58 @@
   "description": "Webapp template using react + compiled + twin.macro",
   "browser": "index.js",
   "dependencies": {
-    "@babel/runtime": "^7.13.17",
-    "@compiled/react": "^0.6.10",
-    "core-js": "^3.10.2",
-    "i18next": "^19.8.7",
-    "i18next-browser-languagedetector": "^6.0.1",
+    "@babel/runtime": "^7.14.0",
+    "@compiled/react": "^0.6.11",
+    "core-js": "^3.12.1",
+    "i18next": "^20.2.2",
+    "i18next-browser-languagedetector": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.8.6",
+    "react-i18next": "^11.8.15",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
+    "@babel/core": "^7.14.2",
+    "@babel/eslint-parser": "^7.14.2",
     "@babel/eslint-plugin": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@compiled/babel-plugin": "^0.6.13",
+    "@compiled/babel-plugin": "^0.6.14",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/react": "^17.0.3",
+    "@types/react": "^17.0.5",
     "@types/webpack-env": "^1.16.0",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
-    "babel-plugin-macros": "^2.8.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
+    "babel-plugin-macros": "^3.1.0",
+    "clean-webpack-plugin": "*",
+    "css-loader": "^5.2.4",
+    "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-jsx": "^10.0.0",
     "eslint-config-standard-react": "^11.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-webpack-plugin": "^2.5.1",
-    "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^5.1.0",
-    "mini-css-extract-plugin": "^1.5.0",
+    "eslint-webpack-plugin": "^2.5.4",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "react-refresh": "^0.9.0",
-    "simple-progress-webpack-plugin": "^1.1.2",
-    "standard": "^16.0.3",
-    "style-loader": "^2.0.0",
-    "tailwindcss": "^2.0.3",
-    "terser-webpack-plugin": "^5.1.1",
-    "twin.macro": "^2.3.3",
-    "typescript-xwind-plugin": "^0.7.0",
-    "webpack": "^5.22.0",
+    "simple-progress-webpack-plugin": "^2.0.0",
+    "tailwindcss": "^2.1.2",
+    "terser-webpack-plugin": "^5.1.2",
+    "twin.macro": "^2.4.1",
+    "webpack": "^5.37.0",
     "webpack-bundle-analyzer": "^4.4.1",
-    "webpack-cli": "^4.5.0",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "test": "eslint .",
+    "lint": "eslint .",
     "dev": "webpack serve --mode development --hot",
-    "build": "eslint . && webpack --mode production"
+    "build": "npm run lint && webpack --mode production"
   },
   "repository": {
     "type": "git",
